# ajax-tools

./: .eslintrc.yaml  .gitignore  404.html  README.md  app.js  eslint.config.mjs  index.html  index.js  mkdocs.yml  package-lock.json  package.json  playwright.config.js  sitemap.xml  test.html  webpack.config.js
docs/: getting-started.md  index.md
examples/: app.py  pyproject.toml
examples/examples/bps/diff/: __init__.py  diff.html  package-lock.json  package.json
examples/examples/bps/diff/static/: domdiff.js  import-map.json
examples/examples/bps/onclick_data_href/: __init__.py  onclick_data_href.html
examples/examples/bps/onclick_href/: __init__.py  onclick_href.html
examples/examples/bps/onsubmit/: __init__.py  onsubmit.html
examples/examples/bps/replace_by_id/: __init__.py  replace_by_id.html
examples/examples/bps/todomvc/: __init__.py  filters.html  package-lock.json  package.json  resp_add_todo_item.html  resp_filter.html  resp_remove_todo_item.html  resp_update.html  todo_count.html  todo_form.html  todo_list.html  todo_mvc.html  todo_mvc_footer.html  todo_mvc_footer_count.html  todo_mvc_form.html  todo_mvc_item.html  todo_mvc_main.html  todo_mvc_new_todo_form.html  todo_mvc_new_todo_input.html
examples/examples/bps/todomvc/components/: todo-list.js  todo-toggler.js
examples/templates/: base.html  index.html
examples/tests/: test_examples.py
getting-started/: index.html
lib/: dom.js  fetch.js  forms.js  index.js  submit-form.js  submit.js  submitter-polyfil.js  submitter_polyfill.js
search/: search_index.json
test/: .eslintrc.yaml  (+6 more)
(+42 files in other folders)
